--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: OpenDominion
+email: email@wavehack.net
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  OpenDominion is an online text-based strategy game based on Dominion, a
+  defunct online text-based strategy game from Kamikaze Games which ran
+  from about 2000 to 2012 until stopping indefinitely.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: wavehack
+github_username:  WaveHack
 
 # Build settings
 markdown: kramdown
